# term_paper_5th_semester

./: README.md  makefile  pyproject.toml
app/: constnts.py  main.py
app/api/: main_router.py
app/api/endpoints/: __init__.py  convert.py
app/convert/: convert.py
app/core/: settings.py
app/schemas/: convert.py  converted.py
kr_convert_sys_sc/: Source.cpp  convert.asm  convert.def  convert.exp  convert.lib  kr_convert_sys_sc.sln  kr_convert_sys_sc.vcxproj  kr_convert_sys_sc.vcxproj.filters
kr_convert_sys_sc/kr_conve.8F6E1F40/Debug/: kr_convert_sys_sc.exe.recipe  kr_convert_sys_sc.ilk  vc143.idb
kr_convert_sys_sc/kr_conve.8F6E1F40/Debug/kr_conve.8F6E1F40.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog  kr_convert_sys_sc.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
